[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
exclude = [".github/"]

[workspace]
members = [
    "crates/fake-cl/",
    "crates/reth-tester/",
    "crates/reth-op-tester/",
    "crates/rpc-tester",
    "crates/tester-common/",
]
default-members = ["crates/reth-tester/"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.dependencies]
fake-cl = { path = "crates/fake-cl" }
reth-tester = { path = "crates/reth-tester" }
reth-op-tester = { path = "crates/reth-op-tester" }
rpc-tester = { path = "crates/rpc-tester" }
tester-common = { path = "crates/tester-common" }

reth = { git = "https://github.com/paradigmxyz/reth", branch = "main"}
reth-consensus-debug-client = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-engine-tree = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-node-optimism = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-stages-types = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", branch = "main" }

alloy-chains = "0.1"

console = "0.15.0"
clap = "4"
eyre = "0.6"
futures = "0.3"
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
parking_lot = "0.12"
serde = { version = "1.0", default-features = false }
serde_json = "1.0.94"
similar = "2.6.0"
tokio = { version = "1.39", default-features = false }

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1


