[package]
name = "reth-tester"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
reth = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-consensus-debug-client = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-engine-tree = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-stages-types = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", branch = "main" }

clap = "4"
eyre = "0.6"
futures = "0.3"
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
parking_lot = "0.12"
serde = { version = "1.0", default-features = false }
tokio = { version = "1.39", default-features = false }

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1


