[package]
name = "reth-tester"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]


reth = { path = "../../reth/bin/reth" }
reth-consensus-debug-client = { path = "../../reth/crates/consensus/debug-client" }
reth-exex = { path = "../../reth/crates/exex/exex" }
reth-engine-tree = { path = "../../reth/crates/engine/tree" }
reth-node-ethereum = { path = "../../reth/crates/ethereum/node" }
reth-rpc-layer = { path = "../../reth/crates/rpc/rpc-layer" }
reth-stages-types = { path = "../../reth/crates/stages/types" }
reth-tracing = { path = "../../reth/crates/tracing" }

console = "0.15.0"
clap = "4"
eyre = "0.6"
futures = "0.3"
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
parking_lot = "0.12"
serde = { version = "1.0", default-features = false }
serde_json = "1.0.94"
similar = "2.6.0"
tokio = { version = "1.39", default-features = false }

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1


