[package]
name = "reth-op-tester"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
tester-common.workspace = true

reth = { workspace = true }
reth-optimism-node = { workspace = true, features = ["optimism"] }
reth-optimism-cli = { workspace = true, features = ["optimism"] }

clap.workspace = true
tokio.workspace = true
