[package]
name = "rpc-tester"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[dependencies]
reth-primitives.workspace = true
reth-rpc-api.workspace = true
alloy-rpc-types.workspace = true
tester-common.workspace = true

clap.workspace = true
eyre.workspace = true
jsonrpsee.workspace = true
tokio.workspace = true
