[package]
name = "rpc-tester"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[dependencies]
tester-common.workspace = true

reth-primitives.workspace = true
reth-rpc-api.workspace = true
reth-tracing.workspace = true

alloy-rpc-types.workspace = true

clap.workspace = true
eyre.workspace = true
jsonrpsee.workspace = true
tokio.workspace = true
